--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">OpenDaylight Release Dashboard</a>
+          <a class="navbar-brand" href="#/bugstatus">OpenDaylight Release Dashboard</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
