Initial code for Bug priority

--- a/views/index.html
+++ b/views/index.html
@@ -70,6 +70,7 @@
               <li class="active"><a>Bugs</a></li>
               <li><a href="#/bugstatus">Status of Bugs</a></li>
               <li><a href="#/bugseverity">Severity of Bugs</a></li>
+              <li><a href="#/bugpriority">Priority of Bugs</a></li>
           </ul>
           <ul class="nav nav-sidebar">
               <li class="active"><a>Code Coverage</a></li>
