implemented search and list feature

--- a/views/index.html
+++ b/views/index.html
@@ -68,6 +68,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
               <li class="active"><a>Bugs</a></li>
+              <li><a href="#/list">List of Projects</a></li>
               <li><a href="#/bugstatus">Status of Bugs</a></li>
               <li><a href="#/bugseverity">Severity of Bugs</a></li>
               <li><a href="#/bugpriority">Priority of Bugs</a></li>
