implementing new features and tesing 2

--- a/views/partials/list.html
+++ b/views/partials/list.html
@@ -1,5 +1,6 @@
 
   <div class="page-header">
+    Search: <input ng-model="query">
     <ul>
         <li ng-repeat="product in dataList | filter:query">
           {{product}}
