implementing Ui for new feature 1

--- a/views/partials/list.html
+++ b/views/partials/list.html
@@ -1,10 +1,8 @@
 
   <div class="page-header">
-  	
     Search: <input type="text" class="form-control" placeholder="Search..." ng-model="query">
-    
-    </hr>
-
+    </br>
+    </br>
     <div class="table-responsive">
     	<table class="table table-striped">
         	<thead>
@@ -25,3 +23,4 @@
             </tbody>
         </table>
     </div>
+  </div>
